--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 
     <body>
         <header class="container-fluid fixed-top">
-            <!-- Upper Nav - Large Screens Only -->
+            <!-- Upper Nav Bar - Medium+ screens only -->
             <div id="uppernav" class="row bg-yellow pt-4 pb-2 px-3 d-none d-lg-flex">
 
                 <!-- Logo -->
@@ -124,7 +124,7 @@
 
             <div class="row bg-yellow">
                 <nav class="navbar w-100 navbar-expand-lg px-3">
-                    <!-- Mobile Nav Bar -->
+                    <!-- Upper Nav Bar - Mobile -->
                     {% include 'includes/mobile-nav-bar.html' %}
                     <!-- Lower Nav -->
                     {% include 'includes/lower-nav.html' %}
@@ -196,7 +196,6 @@
 
         <!-- Footer -->
         <footer>
-
             <!-- Upper Footer -->
             <div class="container-fluid bg-dark-grey d-flex font-body px-3 px-md-4 py-3 py-md-4">
                 <div class="row">
@@ -235,7 +234,7 @@
         
                     <!-- About Us -->
                     <div class="upper-footer-section col-12 col-sm-6 col-md-8">
-                        <h1 class="text-yellow weight-semibold mb-3">ABOUT US</h1>
+                        <h1 class="text-yellow weight-semibold mb-3 mt-3 mt-sm-0">ABOUT US</h1>
                         <p class="text-ib-light">Island Bees was founded in 2012 by 2 Anglesey beekeepers with more honey and bees than they knew what to do with.  We stock a range of honey & bee-based products as well as beekeeping kit, you can also order bees from us, all our bees are fully health checked, we only sell strong, healthy colonies. Our award-winning courses run throughout the summer if you're keen to learn more about bees and beekeeping.</p>
                         <p class="text-ib-light"><em>Site is built for educational purposes and all products are entirely fictional. Transactions are made using Stripe's test mode and no money or products will be sent or received.</em></p>
                     </div>
